tests/err_tuple_struct.rs
use describer::Describe;
 
#[derive(Describe)]
struct MyStruct(Option<bool>, String);
 
fn main() {
}